# gnome-speech

./: Makefile  README.md
src/: ChangeLog  INSTALL  INSTALL.in  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  gnome-speech.spec  gnome-speech.spec.in
src/doc/: Makefile.in  gnome-speech.html
src/drivers/: Makefile.am  Makefile.in
src/drivers/dectalk/: Makefile.in  dectalkspeaker.c  dectalksynthesisdriver.c
src/drivers/eloquence/: Makefile.in  eloquencespeaker.c
src/drivers/espeak/: GNOME_Speech_SynthesisDriver_Espeak.server.in  Makefile.am  Makefile.in  espeakspeaker.c  espeakspeaker.h  espeaksynthesisdriver.c  espeaksynthesisdriver.h
src/drivers/festival/: GNOME_Speech_SynthesisDriver_Festival.server  Makefile.am  Makefile.in  festivalspeaker.c  festivalsynthesisdriver.c  festivalsynthesisdriver.h
src/drivers/freetts/: GNOME_Speech_SynthesisDriver_FreeTTS.server  Makefile.am  Makefile.in  freetts-synthesis-driver.in  user_addenda.txt
src/drivers/freetts/java/: Makefile.am  Makefile.in
src/drivers/freetts/java/org/: Makefile.in
src/drivers/freetts/java/org/GNOME/: Makefile.in
src/drivers/freetts/java/org/GNOME/Speech/: FreeTTSSpeaker.java  FreeTTSSynthesisDriver.java  Makefile.am  Makefile.in
src/drivers/freetts/native/: Makefile.in
src/drivers/loquendo/: GNOME_Speech_SynthesisDriver_Loquendo.server  GNOME_Speech_SynthesisDriver_Loquendo.server.in  Makefile.am  Makefile.in  loquendospeaker.c  loquendospeaker.h  loquendosynthesisdriver.c  loquendosynthesisdriver.h
src/drivers/speech-dispatcher/: Makefile.am  Makefile.in  libspeechd.c  libspeechd.h  speechdspeaker.c  speechdsynthesisdriver.c
src/drivers/swift/: GNOME_Speech_SynthesisDriver_Swift.server.in  Makefile.am  Makefile.in  swiftspeaker.c  swiftspeaker.h  swiftsynthesisdriver.c  swiftsynthesisdriver.h
src/drivers/theta/: Makefile.in
src/drivers/viavoice/: Makefile.in  viavoicespeaker.c  viavoicesynthesisdriver.c  viavoicesynthesisdriver.h
src/gnome-speech/: Makefile.am  Makefile.in  speaker.c
src/idl/: Makefile.in
src/java/: Makefile.am  Makefile.in
src/test/: Makefile.am  Makefile.in  test-speech.c
